<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/img_rv_viaje_viaje"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/foto_estudiante"
            app:srcCompat="@drawable/foto_viaje" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/txt_rv_viaje_idviaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/identificador_viaje"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txt_rv_viaje_origen"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:text="@string/origen"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_rv_viaje_destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destino"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>