<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddViajeActivity">

    <EditText
        android:id="@+id/edt_add_origen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/origen"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_add_destino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/destino"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/edt_add_origen"
        app:layout_constraintStart_toStartOf="@+id/edt_add_origen"
        app:layout_constraintTop_toBottomOf="@+id/edt_add_origen"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/edt_add_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/precio"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_add_destino" />

    <ImageView
        android:id="@+id/img_add_foto"
        android:layout_width="164dp"
        android:layout_height="132dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_add_precio"
        app:srcCompat="@drawable/foto_viaje" />

    <Button
        android:id="@+id/bt_add_insertar_viaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="insertar_viaje"
        android:text="@string/insertar_viaje"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_add_foto" />

    <Button
        android:id="@+id/bt_cambiar_imagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="29dp"
        android:onClick="cambiar_imagen"
        android:text="@string/cambiar_n_imagen"
        app:layout_constraintBottom_toBottomOf="@+id/img_add_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toEndOf="@+id/img_add_foto" />
</androidx.constraintlayout.widget.ConstraintLayout>